--- a/FunBasic.Store/MainPage.xaml
+++ b/FunBasic.Store/MainPage.xaml
@@ -29,8 +29,8 @@ EndFor
                 <!--Button Content="Step" HorizontalAlignment="Center" Width="80" Height="80" VerticalAlignment="Center" Click="Button_Click"/-->
                 <!--Button Content="Stop" HorizontalAlignment="Center" Width="80" Height="80" VerticalAlignment="Bottom" /-->
             </StackPanel>
-            <Canvas Name="Graphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="512" Height="512"/>
-            <TextBox Name="Console" Grid.Column="2" Background="Transparent" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Width="512" Height="512"/>
+            <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="512" Height="512"/>
+            <TextBox Name="MyConsole" Grid.Column="2" Background="Transparent" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Width="512" Height="512"/>
         </Grid>
 
     </Grid>
