--- a/FunBasic.Store/MainPage.xaml
+++ b/FunBasic.Store/MainPage.xaml
@@ -30,7 +30,7 @@ EndFor
                 <!--Button Content="Stop" HorizontalAlignment="Center" Width="80" Height="80" VerticalAlignment="Bottom" /-->
             </StackPanel>
             <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="512" Height="512"/>
-            <TextBox Name="MyConsole" Grid.Column="2" Background="Transparent" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Width="512" Height="512"/>
+            <TextBox Name="MyConsole" Grid.Column="2" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Width="512" Height="512"/>
         </Grid>
 
     </Grid>
