--- a/FunBasic.Store/MainPage.xaml
+++ b/FunBasic.Store/MainPage.xaml
@@ -8,13 +8,13 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Margin="48">
+        <Grid Margin="64">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="64"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBox Name="Code" Grid.Column="0" Background="White" HorizontalAlignment="Left" TextWrapping="NoWrap" AcceptsReturn="True" VerticalAlignment="Center" Width="600" Height="512" xml:space="preserve">
+            <TextBox Name="Code" Grid.Column="0" Background="White" HorizontalAlignment="Left" TextWrapping="NoWrap" AcceptsReturn="True" VerticalAlignment="Center" Width="512" Height="600" xml:space="preserve">
                 <TextBox.Text>TextWindow.WriteLine("Hello World!")
 GraphicsWindow.DrawLine(50,50,100,100) 
 GraphicsWindow.PenColor = "red"
@@ -29,13 +29,17 @@ EndFor
                 <!--Button Content="Step" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Center" Click="Button_Click"/-->
                 <!--Button Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" /-->                
             </StackPanel>
-            <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="600" Height="512">
+            <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="600" MinWidth="256" MaxWidth="720" Height="600">
                 <Canvas.Clip>
-                    <RectangleGeometry Rect="0 0 600 512"/>
+                    <RectangleGeometry Rect="0 0 720 600"/>
                 </Canvas.Clip>                
-                <Image Name="MyTurtle" Source="Images/turtle.png" Visibility="Visible" Canvas.Left="300" Canvas.Top="256"/>
+                <Image Name="MyTurtle" Source="Images/turtle.png" Visibility="Visible" Canvas.Left="300" Canvas.Top="300"/>
             </Canvas>
-            <TextBox Name="MyConsole" Grid.Column="2" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Width="600" Height="512"/>
+            <TextBox Name="MyConsole" Grid.Column="2" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Height="600">
+                <TextBox.Width>
+                    <Binding ElementName="MyGraphics" Path="Width"/>
+                </TextBox.Width>
+            </TextBox>
         </Grid>
 
     </Grid>
