--- a/FunBasic.Store/MainPage.xaml
+++ b/FunBasic.Store/MainPage.xaml
@@ -34,7 +34,7 @@ EndFor
                     <RectangleGeometry Rect="0 0 720 600"/>
                 </Canvas.Clip>                
             </Canvas>
-            <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" HorizontalAlignment="Right" VerticalAlignment="Center" Width="720" MinWidth="256" MaxWidth="720" Height="600">
+            <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" IsHitTestVisible="False" HorizontalAlignment="Right" VerticalAlignment="Center" Width="720" MinWidth="256" MaxWidth="720" Height="600">
                 <Canvas.Clip>
                     <RectangleGeometry Rect="0 0 720 600"/>
                 </Canvas.Clip>
