--- a/FunBasic.Store/MainPage.xaml
+++ b/FunBasic.Store/MainPage.xaml
@@ -25,9 +25,9 @@ EndFor
                 </TextBox.Text>
             </TextBox>
             <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
-                <Button Content="Run" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Top" Click="Button_Click"/>
+                <Button Name="StartButton" Content="Start" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Top" />
                 <!--Button Content="Step" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Center" Click="Button_Click"/-->
-                <!--Button Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" /-->                
+                <Button Name="StopButton" Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" IsEnabled="False"/>                
             </StackPanel>
             <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="720" MinWidth="256" MaxWidth="720" Height="600">
                 <Canvas.Clip>
