--- a/FunBasic.Shell/App.xaml
+++ b/FunBasic.Shell/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="FunBasic.Store.App"
+    x:Class="FunBasic.Shell.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FunBasic.Store">
+    xmlns:local="using:FunBasic.Shell">
 
 </Application>
