--- a/FunBasic.Shell/MainPage.xaml
+++ b/FunBasic.Shell/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="FunBasic.Store.MainPage"
+    x:Class="FunBasic.Shell.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FunBasic.Store"
+    xmlns:local="using:FunBasic.Shell"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -27,12 +27,12 @@ EndFor
             <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
                 <Button Name="StartButton" Content="Start" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Top" />
                 <!--Button Content="Step" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Center" Click="Button_Click"/-->
-                <Button Name="StopButton" Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" IsEnabled="False"/>                
+                <Button Name="StopButton" Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" IsEnabled="False"/>
             </StackPanel>
             <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="720" MinWidth="256" MaxWidth="720" Height="600">
                 <Canvas.Clip>
                     <RectangleGeometry Rect="0 0 720 600"/>
-                </Canvas.Clip>                
+                </Canvas.Clip>
             </Canvas>
             <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" IsHitTestVisible="False" HorizontalAlignment="Right" VerticalAlignment="Center" Width="720" MinWidth="256" MaxWidth="720" Height="600">
                 <Canvas.Clip>
