--- a/FunBasic.App/ItemDetailPage.xaml
+++ b/FunBasic.App/ItemDetailPage.xaml
@@ -36,13 +36,13 @@
                   to show details for the current item
         -->
         <Grid Grid.Row="1" x:Name="contentRegion">
-            <Grid Margin="40,0,40,40">
+            <Grid Margin="40,0,40,10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="64"/>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <editor:SyntaxEditor x:Name="Code" IsLineNumberMarginVisible="True" Text="" Width="600" Height="600">
+                <editor:SyntaxEditor x:Name="Code" IsLineNumberMarginVisible="True" Text="" Height="600">
                     <textImpl:EditorDocument>
                         <x:String xml:space="preserve">/*
 TextWindow.WriteLine("Hello World!")
@@ -72,18 +72,18 @@ EndFor
                     <!--Button Content="Step" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Center" Click="Button_Click"/-->
                     <Button Name="StopButton" IsTabStop="False" Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" IsEnabled="False"/>
                 </StackPanel>
-                <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Right" VerticalAlignment="Center" Width="640" Height="600">
+                <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="600">
                     <Canvas.Clip>
                         <RectangleGeometry Rect="0 0 640 600"/>
                     </Canvas.Clip>
                 </Canvas>
-                <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" IsHitTestVisible="False" HorizontalAlignment="Right" VerticalAlignment="Center" Width="640" Height="600">
+                <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" IsHitTestVisible="False" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="600">
                     <Canvas.Clip>
                         <RectangleGeometry Rect="0 0 640 600"/>
                     </Canvas.Clip>
                     <Image Name="MyTurtle" Source="Images/turtle.png" Visibility="Visible" Canvas.Left="300" Canvas.Top="300"/>
                 </Canvas>
-                <TextBox Name="MyConsole" Grid.Column="2" Foreground="Pink" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Right" AcceptsReturn="True" VerticalAlignment="Center" Height="600">
+                <TextBox Name="MyConsole" Grid.Column="2" Foreground="Pink" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Stretch" AcceptsReturn="True" VerticalAlignment="Center" Height="600">
                     <TextBox.Width>
                         <Binding ElementName="MyGraphics" Path="Width"/>
                     </TextBox.Width>
