--- a/FunBasic.App/ItemDetailPage.xaml
+++ b/FunBasic.App/ItemDetailPage.xaml
@@ -17,7 +17,7 @@
         This grid acts as a root panel for the page that defines two rows:
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
-    -->
+    -->    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
         DataContext="{Binding Item}"
         d:DataContext="{Binding Groups[0].Items[0], Source={d:DesignData Source=/DataModel/SampleData.json, Type=data:SampleDataSource}}">
@@ -36,6 +36,11 @@
                   to show details for the current item
         -->
         <Grid Grid.Row="1" x:Name="contentRegion">
+            <MediaElement x:Name="BeepBeep" Source="Sounds/BeepBeep.wav" AudioCategory="SoundEffects" AutoPlay="False" />
+            <MediaElement x:Name="BellRing" Source="Sounds/BellRing.wav" AudioCategory="SoundEffects" AutoPlay="False" />
+            <MediaElement x:Name="Chime" Source="Sounds/Chime.wav" AudioCategory="SoundEffects" AutoPlay="False" />
+            <MediaElement x:Name="Click" Source="Sounds/Click.wav" AudioCategory="SoundEffects" AutoPlay="False" />
+            <MediaElement x:Name="Pause" Source="Sounds/Pause.wav" AudioCategory="SoundEffects" AutoPlay="False" />
             <Grid Margin="40,0,40,10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
