--- a/FunBasic.App/ItemDetailPage.xaml
+++ b/FunBasic.App/ItemDetailPage.xaml
@@ -28,7 +28,7 @@
         </Grid.ChildrenTransitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
         <!--
@@ -41,20 +41,21 @@
             <MediaElement x:Name="Chime" Source="Sounds/Chime.wav" AudioCategory="SoundEffects" AutoPlay="False" />
             <MediaElement x:Name="Click" Source="Sounds/Click.wav" AudioCategory="SoundEffects" AutoPlay="False" />
             <MediaElement x:Name="Pause" Source="Sounds/Pause.wav" AudioCategory="SoundEffects" AutoPlay="False" />
-            <Grid Margin="40,0,40,10">
+            <Grid Margin="40,0,40,40">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="64"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <editor:SyntaxEditor x:Name="Code" IsLineNumberMarginVisible="True" Text="" Height="600">
+            
+                <editor:SyntaxEditor x:Name="Code" IsLineNumberMarginVisible="True" Text="">
                     <textImpl:EditorDocument>
                         <x:String xml:space="preserve">/*
 TextWindow.WriteLine("Hello World!")
 </x:String>
                     </textImpl:EditorDocument>
                 </editor:SyntaxEditor>
-                <Rectangle Name="CodeOverlay" Fill="Transparent" Opacity="0.5" IsHitTestVisible="False" Height="600"/>
+                <Rectangle Name="CodeOverlay" Fill="Transparent" Opacity="0.5" IsHitTestVisible="False"/>
                 
                 <!--
                 <TextBox Name="Code" Grid.Column="0" Background="White" HorizontalAlignment="Left" TextWrapping="NoWrap" AcceptsReturn="True" VerticalAlignment="Center" Width="512" Height="600" xml:space="preserve">
@@ -73,18 +74,18 @@ EndFor
                     <!--Button Content="Step" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Center" Click="Button_Click"/-->
                     <Button Name="StopButton" IsTabStop="False" Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" IsEnabled="False"/>
                 </StackPanel>
-                <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="600">
+                <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Canvas.Clip>
                         <RectangleGeometry Rect="0 0 640 600"/>
                     </Canvas.Clip>
                 </Canvas>
-                <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" IsHitTestVisible="False" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="600">
+                <Canvas Name="MyShapes" Grid.Column="2" Background="Transparent" IsHitTestVisible="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Canvas.Clip>
                         <RectangleGeometry Rect="0 0 640 600"/>
                     </Canvas.Clip>
                     <Image Name="MyTurtle" Source="Images/turtle.png" Visibility="Visible" Canvas.Left="300" Canvas.Top="300"/>
                 </Canvas>
-                <TextBox Name="MyConsole" Grid.Column="2" Foreground="Pink" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Stretch" AcceptsReturn="True" VerticalAlignment="Center" Height="600">
+                <TextBox Name="MyConsole" Grid.Column="2" Foreground="Pink" Background="Transparent" IsEnabled="False" IsReadOnly="True" HorizontalAlignment="Stretch" AcceptsReturn="True" VerticalAlignment="Stretch">
                     <TextBox.Width>
                         <Binding ElementName="MyGraphics" Path="Width"/>
                     </TextBox.Width>
