--- a/FunBasic.App/ItemDetailPage.xaml
+++ b/FunBasic.App/ItemDetailPage.xaml
@@ -74,7 +74,10 @@ EndFor
                     <!--Button Content="Step" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Center" Click="Button_Click"/-->
                     <Button Name="StopButton" IsTabStop="False" Content="Stop" HorizontalAlignment="Center" Width="64" Height="64" VerticalAlignment="Bottom" IsEnabled="False"/>
                 </StackPanel>
-                <Canvas Name="MyGraphics" Grid.Column="2" Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Canvas Name="MyDrawings" Grid.Column="2" Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <Canvas.CacheMode>
+                        <BitmapCache />
+                    </Canvas.CacheMode>
                     <Canvas.Clip>
                         <RectangleGeometry Rect="0 0 640 600"/>
                     </Canvas.Clip>
